@@ -1,3 +1,9 @@
+2007-12-27  Vinicius Jose Latorre  <viniciusjl@ig.com.br>
+
+	* ps-print.el (ps-mark-active-p): Fun returned back.
+	(ps-print-preprint-region): Use `ps-mark-active-p' instead of
+	`region-active-p' for error checking.
+
 2007-12-27  Eric S. Raymond  <esr@snark.thyrsus.com>
 
 	* (vc.el, vc-sccs.el, vc-rcs.el, vc-cs.el, vc-mcvs.el): Put
